--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
 
 website:
   title: "I Can Do Hard Things"
-  description: "Blog by Aaron Mackay where I try and do things that smart people do"
+  description: "A blog by Aaron Mackay where I try and do things that smart people do"
   navbar:
     right:
       - blog.qmd
